create method works
