# swagger/api.swagger.json
@@ -31,10 +31,56 @@
         "tags": [
           "ReasonRpc"
         ]
+      },
+      "post": {
+        "operationId": "ReasonRpc_CreateReason",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiCreateReasonResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiCreateReasonRequest"
+            }
+          }
+        ],
+        "tags": [
+          "ReasonRpc"
+        ]
       }
     }
   },
   "definitions": {
+    "apiCreateReasonRequest": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "actionId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "why": {
+          "type": "string"
+        }
+      }
+    },
     "apiCreateReasonResponse": {
       "type": "object",
       "properties": {
